# SSCS-HW1

./: .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  artifact.md  bandit-final.txt  bandit-initial.txt  cyclonedx-sbom.json  main.py  merkle_proof.py  mypy.initial.txt  pylint.initial.txt  pyproject.toml  requirements.txt  ruff.initial.txt  util.py
.github/workflows/: cd.yml  ci.yml  scorecard.yml
src/sscs_hw1/: main.py  merkle_proof.py  util.py
tests/: test_all.py
