[tool.poetry]
name = "sscs-hw1"
version = "4.0.2"
description = "Software Supply Chain Security project using Sigstore Rekor"
authors = ["ANITA-0604 <anita900604@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "sscs_hw1", from = "src" }
]


[tool.poetry.dependencies]
python = ">3.9.2,<4.0"
cryptography = "^46.0.3"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "bandit (>=1.8.6,<2.0.0)",
    "cyclonedx-bom (>=7.2.1,<8.0.0)"
]
test = [
    "pytest (>=7.4.0,<8.0.0)",
   "pytest-cov (>=4.0.0,<6.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing"
pythonpath = ["src"]


[tool.poetry.scripts]
python-rekor-monitor = "sscs_hw1.main:main"